--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -42,6 +42,7 @@ ext {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven { url 'https://jitpack.io' }
 }
@@ -100,7 +101,7 @@ configurations.all {
     // enforce 2.12.6, https://github.com/opensearch-project/sql/issues/424
     resolutionStrategy.force "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
     // enforce 1.1.3, https://www.whitesourcesoftware.com/vulnerability-database/WS-2019-0379
-    resolutionStrategy.force 'commons-codec:commons-codec:1.13'
+    resolutionStrategy.force 'commons-codec:commons-codec:1.16.1'
     resolutionStrategy.force "com.google.guava:guava:${guava_version}"
     resolutionStrategy.force 'com.google.guava:failureaccess:1.0.2'
     resolutionStrategy.force "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${versions.jackson}"
@@ -151,10 +152,16 @@ dependencies {
     compileOnly "org.opensearch:opensearch-job-scheduler-spi:${opensearch_build}"
     compileOnly "com.google.guava:guava:${guava_version}"
     compileOnly 'com.google.guava:failureaccess:1.0.2'
+    configurations.all {
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-annotations'
 
+        exclude group: 'org.slf4j', module: 'slf4j-api'
+        exclude group: 'commons-codec', module: 'commons-codec'
+    }
     api "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
-    api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
-    api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+//    api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
+//    api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
 
     api project(":ppl")
     api project(':legacy')
