Pushdown case function in aggregations as range queries (#4400)
* WIP: implementing case range analyzer

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Correct case analyzer

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Create bucket aggregation parsers that supports parsing nested sub aggregations

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Fix unit tests

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Fix parsers to multi-range cases

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Update leaf bucket parser

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Unit test case range analyzer

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add explain ITs for pushing down case in aggregations

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Update CaseRangeAnalyzerTest

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add a yaml test that replicates issue 4201

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add integration tests for case in aggregation

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Fix unit tests

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add a patch to CalcitePPLCaseFunctionIT

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Migrate all composite aggregation parser usage to bucket aggregate parser

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Create a parent abstract classes for BucketAggregationParsers

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Remove an unnecessary bucket agg in AggregationQueryBuilder

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Test pushing down case where there exists null values

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Return empty in CaseRangeAnalyzer to unblock the rest pushdown
- Additionally test number as result expressions

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Document limitations of pushding case as range queries

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Make case pushdown a

--- a/integ-test/src/test/resources/expectedOutput/calcite/explain_stats_bins_on_time.yaml
+++ b/integ-test/src/test/resources/expectedOutput/calcite/explain_stats_bins_on_time.yaml
@@ -7,5 +7,4 @@ calcite:
             CalciteLogicalIndexScan(table=[[OpenSearch, events]])
   physical: |
     EnumerableLimit(fetch=[10000])
-      EnumerableCalc(expr#0..1=[{inputs}], expr#2=[0], expr#3=[>($t1, $t2)], count()=[$t1], @timestamp=[$t0], $condition=[$t3])
-        CalciteEnumerableIndexScan(table=[[OpenSearch, events]], PushDownContext=[[AGGREGATION->rel#:LogicalAggregate.NONE.[](input=RelSubset#,group={0},count()=COUNT())], OpenSearchRequestBuilder(sourceBuilder={"from":0,"size":0,"timeout":"1m","aggregations":{"@timestamp":{"auto_date_histogram":{"field":"@timestamp","buckets":3,"minimum_interval":null}}}}, requestedTotalSize=2147483647, pageSize=null, startFrom=0)])
+      CalciteEnumerableIndexScan(table=[[OpenSearch, events]], PushDownContext=[[AGGREGATION->rel#:LogicalAggregate.NONE.[](input=RelSubset#,group={0},count()=COUNT()), PROJECT->[count(), @timestamp]], OpenSearchRequestBuilder(sourceBuilder={"from":0,"size":0,"timeout":"1m","aggregations":{"@timestamp":{"auto_date_histogram":{"field":"@timestamp","buckets":3,"minimum_interval":null}}}}, requestedTotalSize=2147483647, pageSize=null, startFrom=0)])
