Publish internal modules separately for downstream reuse (#4484)
Co-authored-by: Louis Chu <clingzhi@amazon.com>
Co-authored-by: Chen Dai <daichen@amazon.com>
Co-authored-by: Mebsina <cnoramut@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,7 @@ rootProject.name = 'opensearch-sql'
 
 include 'opensearch-sql-plugin'
 project(':opensearch-sql-plugin').projectDir = file('plugin')
+include 'api'
 include 'ppl'
 include 'common'
 include 'opensearch'
