Mitigate the CI failure caused by 500 Internal Server Error (#4646)
* Fix CI failure

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* revert

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* move forward

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* add retry

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* add restriction for repo jitpack

Signed-off-by: Lantao Jin <ltjin@amazon.com>

* add build cache

Signed-off-by: Lantao Jin <ltjin@amazon.com>

---------

Signed-off-by: Lantao Jin <ltjin@amazon.com>

--- a/integ-test/build.gradle
+++ b/integ-test/build.gradle
@@ -57,8 +57,12 @@ String ignorePrometheusProp = System.getProperty("ignorePrometheus")
 boolean ignorePrometheus = ignorePrometheusProp != null && !ignorePrometheusProp.equalsIgnoreCase("false")
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    maven {
+        url 'https://jitpack.io'
+        content { includeGroup "com.github.babbel" }
+    }
 
     // Add extra repository for the JDBC driver if given by user
     if (System.getProperty("jdbcRepo") != null && new File(System.getProperty("jdbcRepo")).isDirectory()) {
