--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -44,8 +44,12 @@ ext {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    maven {
+        url 'https://jitpack.io'
+        content { includeGroup "com.github.babbel" }
+    }
 }
 
 opensearchplugin {
