--- a/integ-test/src/test/resources/expectedOutput/calcite/explain_agg_sort_on_metrics2.yaml
+++ b/integ-test/src/test/resources/expectedOutput/calcite/explain_agg_sort_on_metrics2.yaml
@@ -1,13 +1,11 @@
 calcite:
   logical: |
-    LogicalSystemLimit(sort0=[$0], dir0=[ASC-nulls-first], fetch=[10000], type=[QUERY_SIZE_LIMIT])
-      LogicalSort(sort0=[$0], dir0=[ASC-nulls-first])
-        LogicalProject(count()=[$2], gender=[$0], state=[$1])
-          LogicalAggregate(group=[{0, 1}], count()=[COUNT()])
-            LogicalProject(gender=[$4], state=[$7])
-              LogicalFilter(condition=[AND(IS NOT NULL($4), IS NOT NULL($7))])
+    LogicalSystemLimit(sort0=[$0], dir0=[DESC-nulls-last], fetch=[10000], type=[QUERY_SIZE_LIMIT])
+      LogicalSort(sort0=[$0], dir0=[DESC-nulls-last])
+        LogicalProject(sum=[$1], state=[$0])
+          LogicalAggregate(group=[{0}], sum=[SUM($1)])
+            LogicalProject(state=[$7], balance=[$3])
+              LogicalFilter(condition=[IS NOT NULL($7)])
                 CalciteLogicalIndexScan(table=[[OpenSearch, opensearch-sql_test_index_account]])
   physical: |
-    EnumerableLimit(fetch=[10000])
-      EnumerableSort(sort0=[$0], dir0=[ASC-nulls-first])
-        CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_account]], PushDownContext=[[AGGREGATION->rel#:LogicalAggregate.NONE.[](input=RelSubset#,group={0, 1},count()=COUNT()), PROJECT->[count(), gender, state]], OpenSearchRequestBuilder(sourceBuilder={"from":0,"size":0,"timeout":"1m","aggregations":{"composite_buckets":{"composite":{"size":1000,"sources":[{"gender":{"terms":{"field":"gender.keyword","missing_bucket":false,"order":"asc"}}},{"state":{"terms":{"field":"state.keyword","missing_bucket":false,"order":"asc"}}}]}}}}, requestedTotalSize=2147483647, pageSize=null, startFrom=0)])
+    CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_account]], PushDownContext=[[AGGREGATION->rel#:LogicalAggregate.NONE.[](input=RelSubset#,group={1},sum=SUM($0)), SORT_AGG_METRICS->[1 DESC LAST], PROJECT->[sum, state], LIMIT->10000], OpenSearchRequestBuilder(sourceBuilder={"from":0,"size":0,"timeout":"1m","aggregations":{"state":{"terms":{"field":"state.keyword","size":1000,"min_doc_count":1,"shard_min_doc_count":0,"show_term_doc_count_error":false,"order":[{"sum":"desc"},{"_key":"asc"}]},"aggregations":{"sum":{"sum":{"field":"balance"}}}}}}, requestedTotalSize=2147483647, pageSize=null, startFrom=0)])
