--- a/integ-test/src/test/resources/expectedOutput/calcite_no_pushdown/explain_scalar_correlated_subquery_in_select.yaml
+++ b/integ-test/src/test/resources/expectedOutput/calcite_no_pushdown/explain_scalar_correlated_subquery_in_select.yaml
@@ -12,11 +12,13 @@ calcite:
   physical: |
     EnumerableCalc(expr#0..3=[{inputs}], expr#4=[IS NULL($t3)], expr#5=[0:BIGINT], expr#6=[CASE($t4, $t5, $t3)], id=[$t1], name=[$t0], count_dept=[$t6])
       EnumerableLimit(fetch=[10000])
-        EnumerableMergeJoin(condition=[=($1, $2)], joinType=[left])
-          EnumerableSort(sort0=[$1], dir0=[ASC])
-            EnumerableCalc(expr#0..10=[{inputs}], name=[$t0], id=[$t2])
-              CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_worker]])
-          EnumerableSort(sort0=[$0], dir0=[ASC])
-            EnumerableAggregate(group=[{1}], count(name)=[COUNT($0)])
-              EnumerableCalc(expr#0..9=[{inputs}], expr#10=[IS NOT NULL($t1)], expr#11=[IS NOT NULL($t0)], expr#12=[AND($t10, $t11)], proj#0..9=[{exprs}], $condition=[$t12])
-                CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_work_information]])
+        EnumerableNestedLoopJoin(condition=[IS NOT DISTINCT FROM($1, $2)], joinType=[left])
+          EnumerableCalc(expr#0..10=[{inputs}], name=[$t0], id=[$t2])
+            CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_worker]])
+          EnumerableCalc(expr#0..2=[{inputs}], expr#3=[IS NOT NULL($t2)], expr#4=[0], expr#5=[CASE($t3, $t2, $t4)], uid=[$t0], count(name)=[$t5])
+            EnumerableNestedLoopJoin(condition=[IS NOT DISTINCT FROM($0, $1)], joinType=[left])
+              EnumerableAggregate(group=[{2}])
+                CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_worker]])
+              EnumerableAggregate(group=[{1}], count(name)=[COUNT($0)])
+                EnumerableCalc(expr#0..9=[{inputs}], expr#10=[IS NOT NULL($t1)], expr#11=[IS NOT NULL($t0)], expr#12=[AND($t10, $t11)], proj#0..9=[{exprs}], $condition=[$t12])
+                  CalciteEnumerableIndexScan(table=[[OpenSearch, opensearch-sql_test_index_work_information]])
