--- a/integ-test/src/test/resources/expectedOutput/calcite_no_pushdown/explain_timechart_count.yaml
+++ b/integ-test/src/test/resources/expectedOutput/calcite_no_pushdown/explain_timechart_count.yaml
@@ -46,18 +46,16 @@ calcite:
           EnumerableUnion(all=[false])
             EnumerableAggregate(group=[{0, 1}], actual_count=[$SUM0($2)])
               EnumerableCalc(expr#0..4=[{inputs}], expr#5=[CAST($t0):TIMESTAMP(0) NOT NULL], expr#6=[IS NOT NULL($t3)], expr#7=[IS NULL($t1)], expr#8=[null:NULL], expr#9=['OTHER'], expr#10=[CASE($t7, $t8, $t9)], expr#11=[CASE($t6, $t1, $t10)], @timestamp=[$t5], host=[$t11], count=[$t2])
-                EnumerableMergeJoin(condition=[=($1, $3)], joinType=[left])
-                  EnumerableSort(sort0=[$1], dir0=[ASC])
-                    EnumerableCalc(expr#0..2=[{inputs}], @timestamp=[$t1], host=[$t0], $f2_0=[$t2])
-                      EnumerableAggregate(group=[{0, 1}], agg#0=[COUNT()])
-                        EnumerableCalc(expr#0..15=[{inputs}], expr#16=[1], expr#17=['m'], expr#18=[SPAN($t1, $t16, $t17)], host=[$t4], $f2=[$t18])
+                EnumerableNestedLoopJoin(condition=[IS NOT DISTINCT FROM($1, $3)], joinType=[left])
+                  EnumerableCalc(expr#0..2=[{inputs}], @timestamp=[$t1], host=[$t0], $f2_0=[$t2])
+                    EnumerableAggregate(group=[{0, 1}], agg#0=[COUNT()])
+                      EnumerableCalc(expr#0..15=[{inputs}], expr#16=[1], expr#17=['m'], expr#18=[SPAN($t1, $t16, $t17)], host=[$t4], $f2=[$t18])
+                        CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
+                  EnumerableLimit(fetch=[10])
+                    EnumerableSort(sort0=[$1], dir0=[DESC])
+                      EnumerableAggregate(group=[{4}], grand_total=[COUNT()])
+                        EnumerableCalc(expr#0..15=[{inputs}], expr#16=[IS NOT NULL($t4)], proj#0..15=[{exprs}], $condition=[$t16])
                           CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
-                  EnumerableSort(sort0=[$0], dir0=[ASC])
-                    EnumerableLimit(fetch=[10])
-                      EnumerableSort(sort0=[$1], dir0=[DESC])
-                        EnumerableAggregate(group=[{4}], grand_total=[COUNT()])
-                          EnumerableCalc(expr#0..15=[{inputs}], expr#16=[IS NOT NULL($t4)], proj#0..15=[{exprs}], $condition=[$t16])
-                            CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
             EnumerableCalc(expr#0..1=[{inputs}], expr#2=[CAST($t0):TIMESTAMP(0) NOT NULL], expr#3=[0], @timestamp=[$t2], host=[$t1], count=[$t3])
               EnumerableNestedLoopJoin(condition=[true], joinType=[inner])
                 EnumerableAggregate(group=[{1}])
@@ -65,15 +63,13 @@ calcite:
                     CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
                 EnumerableAggregate(group=[{0}])
                   EnumerableCalc(expr#0..2=[{inputs}], expr#3=[IS NOT NULL($t1)], expr#4=[IS NULL($t0)], expr#5=[null:NULL], expr#6=['OTHER'], expr#7=[CASE($t4, $t5, $t6)], expr#8=[CASE($t3, $t0, $t7)], $f0=[$t8])
-                    EnumerableMergeJoin(condition=[=($0, $1)], joinType=[left])
-                      EnumerableSort(sort0=[$0], dir0=[ASC])
-                        EnumerableCalc(expr#0..1=[{inputs}], host=[$t0])
-                          EnumerableAggregate(group=[{0, 1}])
-                            EnumerableCalc(expr#0..15=[{inputs}], expr#16=[1], expr#17=['m'], expr#18=[SPAN($t1, $t16, $t17)], host=[$t4], $f2=[$t18])
+                    EnumerableNestedLoopJoin(condition=[IS NOT DISTINCT FROM($0, $1)], joinType=[left])
+                      EnumerableCalc(expr#0..1=[{inputs}], host=[$t0])
+                        EnumerableAggregate(group=[{0, 1}])
+                          EnumerableCalc(expr#0..15=[{inputs}], expr#16=[1], expr#17=['m'], expr#18=[SPAN($t1, $t16, $t17)], host=[$t4], $f2=[$t18])
+                            CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
+                      EnumerableLimit(fetch=[10])
+                        EnumerableSort(sort0=[$1], dir0=[DESC])
+                          EnumerableAggregate(group=[{4}], grand_total=[COUNT()])
+                            EnumerableCalc(expr#0..15=[{inputs}], expr#16=[IS NOT NULL($t4)], proj#0..15=[{exprs}], $condition=[$t16])
                               CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
-                      EnumerableSort(sort0=[$0], dir0=[ASC])
-                        EnumerableLimit(fetch=[10])
-                          EnumerableSort(sort0=[$1], dir0=[DESC])
-                            EnumerableAggregate(group=[{4}], grand_total=[COUNT()])
-                              EnumerableCalc(expr#0..15=[{inputs}], expr#16=[IS NOT NULL($t4)], proj#0..15=[{exprs}], $condition=[$t16])
-                                CalciteEnumerableIndexScan(table=[[OpenSearch, events]])
