Add ITs to E2E workflow (#11)
* Add assertions on all 43 queries against expected results from 3.4.
Updated test to categorize into passing/failing (non200) and failing with 200.

Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

* add CalcitePPLClickBenchIT.testDataFusion to e2e test workflow

Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

* Update dataset to have hits on all queries, update expected fixtures.

Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

---------

Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

--- a/.github/workflows/datafusion-e2e-test.yml
+++ b/.github/workflows/datafusion-e2e-test.yml
@@ -79,6 +79,10 @@ jobs:
           # Wait for OpenSearch to start
           timeout 300 bash -c 'until curl -s http://localhost:9200; do sleep 5; done'
 
+      - name: Run SQL CalcitePPLClickbenchIT
+        working-directory: opensearch-sql
+        run: ./gradlew :integ-test:integTest --tests "org.opensearch.sql.calcite.clickbench.CalcitePPLClickBenchIT" -Dtests.method="testDataFusion" -Dtests.cluster=localhost:9200 -Dtests.rest.cluster=localhost:9200 -DignorePrometheus=true -Dtests.clustername=opensearch
+
       - name: Run E2E Tests
         run: |
           # Create index
