update gh workflow to display pass/fail output and update supported list
Signed-off-by: Marc Handalian <marc.handalian@gmail.com>

--- a/.github/workflows/datafusion-e2e-test.yml
+++ b/.github/workflows/datafusion-e2e-test.yml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Run SQL CalcitePPLClickbenchIT
         working-directory: opensearch-sql
-        run: ./gradlew :integ-test:integTest --tests "org.opensearch.sql.calcite.clickbench.CalcitePPLClickBenchIT" -Dtests.method="testDataFusion" -Dtests.cluster=localhost:9200 -Dtests.rest.cluster=localhost:9200 -DignorePrometheus=true -Dtests.clustername=opensearch
+        run: ./gradlew :integ-test:integTest --tests "org.opensearch.sql.calcite.clickbench.CalcitePPLClickBenchIT" -Dtests.method="testDataFusion" -Dtests.cluster=localhost:9200 -Dtests.rest.cluster=localhost:9200 -DignorePrometheus=true -Dtests.clustername=opensearch -Dtests.output=true
 
       - name: Run E2E Tests
         run: |
