Added min function for string field and fixed query 29 in tests (#20)
* Added min function for string field

Signed-off-by: Vinay Krishna Pudyodu <vinkrish.neo@gmail.com>

* Fixed the query 29 PPL

Signed-off-by: Vinay Krishna Pudyodu <vinkrish.neo@gmail.com>

---------

Signed-off-by: Vinay Krishna Pudyodu <vinkrish.neo@gmail.com>

--- a/opensearch/src/main/resources/opensearch_custom_functions.yaml
+++ b/opensearch/src/main/resources/opensearch_custom_functions.yaml
@@ -21,3 +21,11 @@ scalar_functions:
             value: precision_timestamp<P>
         return: i64
 
+aggregate_functions:
+  - name: min
+    description: Find the minimum value of a string
+    impls:
+      - args:
+          - name: x
+            value: string
+        return: i64
